remove {overflow: hidden} from .fixed-pos

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,6 @@ body {
 .fixed-pos {
     position: absolute;
     transform-origin: top left;
-    overflow: hidden;
 }
 
 
